Fix scrollbar to tv scroll

--- a/pages/app.css
+++ b/pages/app.css
@@ -2,4 +2,9 @@ html,
 body {
     margin: 0;
     background-color: black;
+    overflow-y: auto;
+}
+
+body::-webkit-scrollbar {
+    width: 0px;
 }
